fixed illustration img distortions & updated version

--- a/src/components/Illustration/index.css
+++ b/src/components/Illustration/index.css
@@ -1,27 +1,43 @@
 .volume {
-    display: flex;
+    display: grid;
+    grid-template-columns: 20vw auto;
     overflow: auto;
-    height: 30vh
+    gap: 1rem;
 }
 
+.title {
+    text-align: end;
+}
 .img-wrapper {
     display: flex;
 }
 
-@media screen and (min-width: 1024px) {
-    .lg-hide {
+.illustration-img {
+    width: 100%;
+    height: 30vh;
+    object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+    .md-hide {
         display: none;
     }
+}
 
+@media screen and (min-width: 1024px) {
     .title {
         padding-left: 1rem;
     }
     
     .volume {
+        grid-template-columns: 10rem auto;
         scrollbar-width: none;
         -webkit-overflow-scrolling: touch;
         -ms-overflow-style: none;
         white-space: nowrap;
+    }
+
+    .illustration-img {
         height: 40vh;
     }
 
